Mejore deploy a gh-pages & readme

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "wikipedia-viewer",
   "version": "0.1.0",
+  "homepage": "http://marianoheller.github.io/wikipedia-viewer",
   "private": true,
   "dependencies": {
     "axios": "^0.16.1",
@@ -16,6 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   }
 }
